@@ -100,6 +100,7 @@ public final class J2MEPlatform extends JavaPlatform {
     private String displayName;
     private List<URL> javadocs;
     private ClassPath sources;
+    private boolean me3Platform;
     
     public J2MEPlatform(String name, String home, String type, String displayName, String srcPath, String docPath, String preverifyCmd, String runCmd, String debugCmd, Device[] devices) {
         assert name != null;
@@ -118,6 +119,7 @@ public final class J2MEPlatform extends JavaPlatform {
         this.devices = devices;
         this.sources = ClassPathSupport.createClassPath(resolveRelativePathToFileObjects(srcPath).toArray(new FileObject[0]));
         this.javadocs = resolveRelativePathToURLs(docPath);
+        this.me3Platform = isJavaME3Platform(this.home);
     }
     
     public Device[] getDevices() {
@@ -152,7 +154,7 @@ public final class J2MEPlatform extends JavaPlatform {
                 return url;
             }
         } catch (MalformedURLException e) {}
-        return (fragment.startsWith(PLATFORM_STRING_PREFIX) ? new File(homeFile, fragment.substring(PLATFORM_STRING_PREFIX.length())) : new File(fragment)).toURI().toURL();
+        return Utilities.toURI((fragment.startsWith(PLATFORM_STRING_PREFIX) ? new File(homeFile, fragment.substring(PLATFORM_STRING_PREFIX.length())) : new File(fragment))).toURL();
     }
     
     public URL resolveRelativePathToURL(final String path) {
@@ -162,7 +164,7 @@ public final class J2MEPlatform extends JavaPlatform {
             if (!FileUtil.isArchiveFile(url)) {
                 final String s = url.toExternalForm();
                 if (s.endsWith("/")) return url; //NOI18N
-                return new URL(s + '/');
+                return new URL(s + '/'); //NOI18N
             }
             return FileUtil.getArchiveRoot(url);
         } catch (MalformedURLException e) {
@@ -173,7 +175,7 @@ public final class J2MEPlatform extends JavaPlatform {
     
     public static URL localfilepath2url(final String path) {
         try {
-            return new File(path).toURI().toURL();
+            return Utilities.toURI(new File(path)).toURL();
         } catch (MalformedURLException e) {
             e.printStackTrace();
             return null;
@@ -182,7 +184,7 @@ public final class J2MEPlatform extends JavaPlatform {
     
     public static URL localfilepath2url(final File file) {
         try {
-            return file.toURI().toURL();
+            return Utilities.toURI(file).toURL();
         } catch (MalformedURLException e) {
             e.printStackTrace();
             return null;
@@ -249,6 +251,7 @@ public final class J2MEPlatform extends JavaPlatform {
      * implements JavaPlatform
      * @return empty ClassPath
      */
+    @Override
     public ClassPath getStandardLibraries() {
         if (standardLibs == null) {
             standardLibs = ClassPathSupport.createClassPath(new ArrayList<PathResourceImplementation>());
@@ -260,6 +263,7 @@ public final class J2MEPlatform extends JavaPlatform {
      * implements JavaPlatform
      * @return complete ClassPath over all APIs and all devices
      */
+    @Override
     public ClassPath getBootstrapLibraries() {
         if (bootstrapLibs == null) {
             bootstrapLibs = ClassPathSupport.createClassPath(getAllLibraries());
@@ -278,6 +282,7 @@ public final class J2MEPlatform extends JavaPlatform {
         return fobs.toArray(new FileObject[fobs.size()]);
     }
     
+    @Override
     public String getDisplayName() {
         return displayName;
     }
@@ -290,10 +295,12 @@ public final class J2MEPlatform extends JavaPlatform {
         this.name = name;
     }
     
+    @Override
     public String toString() {
         return getDisplayName();
     }
     
+    @Override
     public String getVendor() {
         return displayName;
     }
@@ -337,10 +344,19 @@ public final class J2MEPlatform extends JavaPlatform {
         return homeFile.getAbsolutePath();
     }
 
+    public boolean isMe3Platform() {
+        return me3Platform;
+    }        
+
     private boolean hasEssentialTools(Collection<FileObject> folders) {
-        return findTool("emulator", folders)!=null && findTool("preverify", folders)!=null; //NOI18N
+        if (me3Platform) {
+            return findTool("emulator", folders) != null && findTool("preverify", folders) != null; //NOI18N
+        } else {
+            return findTool("emulator", folders) != null; //NOI18N
+        }
     }
     
+    @Override
     public Collection<FileObject> getInstallFolders() {
         if (home == null) home = FileUtil.toFileObject(homeFile);
         Collection<FileObject> folders;
@@ -351,6 +367,7 @@ public final class J2MEPlatform extends JavaPlatform {
         return Collections.EMPTY_SET;
     }
     
+    @Override
     public List<URL> getJavadocFolders() {
         return Collections.unmodifiableList(javadocs);
     }
@@ -418,19 +435,24 @@ public final class J2MEPlatform extends JavaPlatform {
         return toRelativePaths(Arrays.asList(sources.getRoots()));
     }
     
+    @Override
     public Map<String,String> getProperties() {
         return Collections.singletonMap("platform.ant.name", getName()); //NOI18N
     }
     
+    @Override
     public synchronized Specification getSpecification() {
         if (spec == null) {
             final HashSet<J2MEProfile> profs = new HashSet<J2MEProfile>();
             for (int i=0; i<devices.length; i++) {
                 final J2MEProfile[] profiles = devices[i].getProfiles();
-                for (int j=0; j<profiles.length; j++)
-                    profs.add(profiles[j]);
+                profs.addAll(Arrays.asList(profiles));
             }
-            spec = new Specification(SPECIFICATION_NAME, null, NbBundle.getMessage(J2MEPlatform.class, "TXT_J2MEDisplayName"), profs.toArray(new Profile[profs.size()]));
+            SpecificationVersion sv = new SpecificationVersion("8.0"); //NOI18N
+            if (isMe3Platform()) {
+                sv = new SpecificationVersion("3.0"); //NOI18N
+            }
+            spec = new Specification(SPECIFICATION_NAME, sv, NbBundle.getMessage(J2MEPlatform.class, "TXT_J2MEDisplayName"), profs.toArray(new Profile[profs.size()])); //NOI18N
         }
         return spec;
     }
@@ -440,7 +462,17 @@ public final class J2MEPlatform extends JavaPlatform {
         for (int i=0; i<devices.length; i++) if (devices[i].isValid()) return true;
         return false;
     }
-    
+
+    public static boolean isJavaME3Platform(FileObject dir) {
+        return J2MEPlatform.findTool("emulator", Collections.singletonList(dir)) != null //NOI18N
+                && J2MEPlatform.findTool("preverify", Collections.singletonList(dir)) != null; //NOI18N
+    }
+
+    public static boolean isJavaME8Platform(FileObject dir) {
+        return J2MEPlatform.findTool("emulator", Collections.singletonList(dir)) != null //NOI18N
+                && J2MEPlatform.findTool("preverify", Collections.singletonList(dir)) == null; //NOI18N
+    }
+
     public static final class Device {
         
         private final String name;
@@ -514,6 +546,7 @@ public final class J2MEPlatform extends JavaPlatform {
             return this.name;
         }
         
+        @Override
         public String toString() {
             return getName();
         }
@@ -625,14 +658,14 @@ public final class J2MEPlatform extends JavaPlatform {
             this.bitDepth = (Integer) o;
             
             try {
-                o = new Boolean(color);
+                o = Boolean.valueOf(color);
             } catch (NumberFormatException e) {
                 o = null;
             }
             this.color = (Boolean) o;
             
             try {
-                o = new Boolean(touch);
+                o = Boolean.valueOf(touch);
             } catch (NumberFormatException e) {
                 o = null;
             }
@@ -659,6 +692,7 @@ public final class J2MEPlatform extends JavaPlatform {
             return width;
         }
         
+        @Override
         public boolean equals(Object obj) {
             if (obj instanceof Screen) {
                 Integer width = ((Screen) obj).getWidth();
@@ -676,6 +710,17 @@ public final class J2MEPlatform extends JavaPlatform {
                 return ret;
             }
             return false;
+        }
+
+        @Override
+        public int hashCode() {
+            int hash = 3;
+            hash = 71 * hash + (this.width != null ? this.width.hashCode() : 0);
+            hash = 71 * hash + (this.height != null ? this.height.hashCode() : 0);
+            hash = 71 * hash + (this.bitDepth != null ? this.bitDepth.hashCode() : 0);
+            hash = 71 * hash + (this.color != null ? this.color.hashCode() : 0);
+            hash = 71 * hash + (this.touch != null ? this.touch.hashCode() : 0);
+            return hash;
         }
     }
     
@@ -747,10 +792,12 @@ public final class J2MEPlatform extends JavaPlatform {
             return classPath.equals(PLATFORM_STRING_PREFIX + displayName);
         }
         
+        @Override
         public String toString() {
             return isNameIsJarFileName() || "IMP-NG".equalsIgnoreCase(getName()) ? getName() : getName() + '-' + getVersion().toString(); //NOI18N
         }
         
+        @Override
         public int compareTo(final Object o) {
             final Profile p = (Profile)o;
             final int r = getName().compareTo(p.getName());
@@ -791,6 +838,7 @@ public final class J2MEPlatform extends JavaPlatform {
         return null;
     }
     
+    @Override
     public FileObject findTool(final String toolName) {
         return findTool(toolName, this.getInstallFolders());
     }
